--- a/src/app/page/cart/cart.html
+++ b/src/app/page/cart/cart.html
@@ -68,7 +68,7 @@
                         </button>
                         <span
                           class="btn btn-outline-secondary btn-sm disabled"
-                          style="width: 32px; padding: 0"
+                          style="width: 32px; padding-top: 5px"
                         >
                           {{ item.quantity }}
                         </span>
