--- a/src/app/page/home/home.html
+++ b/src/app/page/home/home.html
@@ -1,5 +1,4 @@
 <app-hero-sec></app-hero-sec>
-
 <section class="container py-5">
   <h2 class="display-6 fw-bold mb-4">Featured Books</h2>
   <div class="row g-4">
@@ -8,3 +7,7 @@
     </div>
   </div>
 </section>
+<div class="section-divider mt-5"></div>
+
+<app-cat></app-cat>
+<app-footer></app-footer>
