connect service with api

--- a/src/app/page/cart/cart.html
+++ b/src/app/page/cart/cart.html
@@ -92,7 +92,7 @@
                         </button>
                       </div>
                       <p class="fs-4 fw-bold text-primary-custom mb-0">
-                        ${{ (parsePrice(item.price) * item.quantity).toFixed(2) }}
+                      ${{ (item.price * item.quantity).toFixed(2) }}
                       </p>
                     </div>
                   </div>
