--- a/src/app/page/home/home.html
+++ b/src/app/page/home/home.html
@@ -1,11 +1,15 @@
 <app-hero-sec></app-hero-sec>
 <section class="container py-5">
+  <div *ngIf="errorMessage" class="error-message">
+  {{ errorMessage }}
+</div>
   <h2 class="display-6 fw-bold mb-4">Featured Books</h2>
   <div class="row g-4">
     <div class="col-12 col-md-6 col-lg-3" *ngFor="let book of featuredBooks">
       <app-book-card [book]="book"></app-book-card>
     </div>
   </div>
+ 
 </section>
 <div class="section-divider mt-5"></div>
 
