--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -118,27 +118,26 @@
         </svg>
       </button>
 
-      <a routerLink="/profile">
-        <button
-          class="btn btn-icon-custom d-flex align-items-center justify-content-center"
-          type="button"
+      <button
+        class="btn btn-icon-custom d-flex align-items-center justify-content-center"
+        type="button"
+        (click)="onProfileClick()"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="18"
+          height="18"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="18"
-            height="18"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
-            <circle cx="12" cy="7" r="4" />
-          </svg>
-        </button>
-      </a>
+          <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
+          <circle cx="12" cy="7" r="4" />
+        </svg>
+      </button>
     </div>
   </div>
 </nav>
