--- a/src/app/page/register/register.html
+++ b/src/app/page/register/register.html
@@ -22,13 +22,13 @@
       <form (ngSubmit)="onSubmit()" #registerForm="ngForm">
         <div class="row g-3 mb-3">
           <div class="col-md-6">
-            <label for="firstName" class="form-label">First Name</label>
+            <label for="firstName" class="form-label">Name</label>
             <input
               type="text"
               class="form-control form-control-lg"
               id="firstName"
               name="firstName"
-              [(ngModel)]="form.firstName"
+              [(ngModel)]="form.Name"
               required
               #firstName="ngModel"
             />
@@ -36,26 +36,7 @@
               *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
               class="text-danger small mt-1"
             >
-              First name is required
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <label for="lastName" class="form-label">Last Name</label>
-            <input
-              type="text"
-              class="form-control form-control-lg"
-              id="lastName"
-              name="lastName"
-              [(ngModel)]="form.lastName"
-              required
-              #lastName="ngModel"
-            />
-            <div
-              *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
-              class="text-danger small mt-1"
-            >
-              Last name is required
+              Name is required
             </div>
           </div>
         </div>
