--- a/src/app/admin/manage-orders/manage-orders.html
+++ b/src/app/admin/manage-orders/manage-orders.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 pt-5">
   <h2 class="mb-3">Manage Orders</h2>
 
   <div *ngIf="isLoading" class="text-center my-3">
@@ -23,7 +23,7 @@
         <td>{{ i + 1 }}</td>
         <td>{{ order.User }}</td>
 
-        
+
         <td>{{ order.Books?.[0]?.BookId }}</td>
 
         <td>{{ order.Books?.[0]?.Quantity }}</td>
