--- a/src/app/admin/manage-users/manage-users.html
+++ b/src/app/admin/manage-users/manage-users.html
@@ -1,7 +1,7 @@
-<div class="container mt-7">
+<div class="container mt-5 pt-5">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Manage Users</h2>
-   
+
   </div>
 
   <div *ngIf="isLoading" class="text-center my-3">
