--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <router-outlet></router-outlet>
-<app-error-toast></app-error-toast>
-<app-success-toast></app-success-toast>
+<!-- <app-error-toast></app-error-toast>
+<app-success-toast></app-success-toast> -->
 <app-ai></app-ai>
 <app-footer></app-footer>
