--- a/src/app/page/category/category.html
+++ b/src/app/page/category/category.html
@@ -139,7 +139,7 @@
     </div>
   </main>
 </div>
-<app-error-toast></app-error-toast>
-<app-success-toast></app-success-toast>
+<!-- <app-error-toast></app-error-toast>
+<app-success-toast></app-success-toast> -->
 <app-ai></app-ai>
-<app-footer></app-footer>
+
