--- a/src/styles.css
+++ b/src/styles.css
@@ -167,12 +167,10 @@ h6 {
 .book-card-overlay {
   position: absolute;
   inset: 0;
-  background: linear-gradient(
-    to top,
-    rgba(255, 255, 255, 0.95),
-    rgba(255, 255, 255, 0.8),
-    transparent
-  );
+  background: linear-gradient(to top,
+      rgba(255, 255, 255, 0.95),
+      rgba(255, 255, 255, 0.8),
+      transparent);
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -250,6 +248,7 @@ h6 {
     opacity: 0;
     transform: translateY(10px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -261,6 +260,7 @@ h6 {
     transform: scale(0.95);
     opacity: 0;
   }
+
   to {
     transform: scale(1);
     opacity: 1;
@@ -268,10 +268,12 @@ h6 {
 }
 
 @keyframes float {
+
   0%,
   100% {
     transform: translateY(0px);
   }
+
   50% {
     transform: translateY(-10px);
   }
@@ -367,4 +369,24 @@ html {
 
 .btn-icon:hover {
   background: var(--bs-secondary);
+}
+
+
+.ngx-toastr {
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-size: 14px;
+
+}
+
+/* success toast style */
+.toast-success {
+  background-color: #198754;
+  color: #fff;
+}
+
+/* error toast style */
+.toast-error {
+  background-color: #dc3545;
+  color: #fff;
 }
